--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@
 # Defaults are shown below.  The BOT_KEY must be assigned
 # (All values are treated as strings, converted at time of use)
 SD_HOST='localhost'
-SD_PORT='7680'
+SD_PORT=7860
 SD_VARIATION_STRENGTH='0.065'
 SD_UPSCALER='R-ESRGAN 4x+'
 BOT_KEY=
